samples/_failures_safe/1761456719_5104a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22453e6c.c: In function ‘main’:
./samples/SAFE/__tmp_22453e6c.c:177:5: error: expected declaration or statement at end of input
  177 |     return 0;
      |     ^~~~~~
